scss: prevent channel names from wrapping

--- a/resources/assets/sass/pages/subscriptions.scss
+++ b/resources/assets/sass/pages/subscriptions.scss
@@ -26,6 +26,7 @@
       position: relative;
       top: 20px;
       font-size: 30px;
+      white-space: nowrap;
 
       a {
         padding-left: 20px;
